// Code generated by github.com/tinkler/mqttadmin; DO NOT EDIT.
syntax = "proto3";
option go_package = "github.com/tinkler/ssms/backend/service/proxy/chat/v1;chat_v1";
option java_multiple_files = true;
option java_package = "ink.sfs.tinkler.mqttadmin.chat.v1";
option java_outer_classname = "chatProto";
package chat.v1;
import "google/protobuf/any.proto";

message Chat {
	repeated ChatCompletionMessage messages = 1;
	int32 max_tokens = 2;
	string model = 3;
	bool stoped = 4;
	repeated ChatCompletionFunction functions = 5;
}

message ChatCompletionMessageFunctionCall {
	string name = 1;
	string arguments = 2;
}

message ChatCompletionMessage {
	string role = 1;
	string content = 2;
	string name = 3;
	ChatCompletionMessageFunctionCall function_call = 4;
	string finish_reason = 5;
}

message ChatCompletionFunctionParametersProperty {
	string type = 1;
	string description = 2;
	repeated string enum = 3;
}

message ChatCompletionFunctionParameters {
	string type = 1;
	map<string,ChatCompletionFunctionParametersProperty> properties = 2;
	repeated string required = 3;
}

message ChatCompletionFunction {
	string name = 1;
	string description = 2;
	ChatCompletionFunctionParameters parameters = 3;
}

service ChatGsrv {
	rpc ChatEnquire (google.protobuf.Any) returns (google.protobuf.Any);
	rpc ChatEnquireStream (stream google.protobuf.Any) returns (stream google.protobuf.Any);
}
