// Code generated by github.com/tinkler/mqttadmin; DO NOT EDIT.
syntax = "proto3";
option go_package = "github.com/tinkler/ssms/backend/service/smart/smart/v1;smart_v1";
option java_multiple_files = true;
option java_package = "ink.sfs.tinkler.mqttadmin.smart.v1";
option java_outer_classname = "smartProto";
package smart.v1;
import "google/protobuf/any.proto";

message ChatMessage {
	string content = 1;
	string sender = 2;
}

message SmartChat {
	repeated ChatMessage messages = 1;
}

message SmartHome {
	string current_model = 1;
}

service SmartGsrv {
	rpc SmartHomeEnquire (stream google.protobuf.Any) returns (stream google.protobuf.Any);
}
